--- a/css/custom.css
+++ b/css/custom.css
@@ -68,3 +68,45 @@
     word-break: break-word;
     hyphens: auto;
 }
+
+
+/* The main wrapper for our pagination links */
+.pagination {
+    position: relative;
+    margin: 4rem auto; 
+    font-family: "Open Sans", sans-serif;
+    color: #9EABB3;
+    text-align: center;
+}
+
+.pagination a {
+    color: #9EABB3;
+    transition: all 0.2s ease;
+}
+
+/* Push the previous/next links out to the left/right */
+.older-posts,
+.newer-posts {
+    position: absolute;
+    display: inline-block;
+}
+
+.older-posts {
+    right: 0;
+}
+
+.page-number {
+    display: inline-block;
+    padding: 2px 0;
+    min-width: 100px;
+}
+
+.newer-posts {
+    left: 0;
+}
+
+.older-posts:hover,
+.newer-posts:hover {
+    color: #889093;
+    border-color: #98a0a4;
+}
